# GNURADIO_LABCOMUIS_L1A_G6

./: README.md
Lab_3/gr-Modulos_L1A/apps/: CMakeLists.txt
Lab_3/gr-Modulos_L1A/grc/: CMakeLists.txt  Modulos_L1A_ParteEnteraL1A.block.yml
Lab_3/gr-Modulos_L1A/python/Modulos_L1A/: CMakeLists.txt  ParteEnteraL1A.py  __init__.py
Lab_3/gr-Modulos_L1A/python/Modulos_L1A/bindings/: CMakeLists.txt  python_bindings.cc
Lab_4/Lab4_Gnu_files/: BloqueEnvolventeDSBSC.grc  BloqueModuladorAM.grc  ModuladorAM.grc  TransmisorAM.grc
Lab_5/: TablaLaboratorioPM.xlsx
Lab_5/5_1/Lab_5_1_Gnu_Files/: Bloque Envolvente Compleja PM L1A.grc  Modulacion PM.grc
Lab_5/5_2/: TablaLaboratorioFM.xlsx
Lab_5/5_2/5_2_Gnu_Files/: Demodulador FM.grc
Practica_2/: Evidencia_Potencia_Rx
Practica_2/Lab_2_1_Gnu_Files/: Lab_2.grc
practica_1/: P1_J1A_G5.py  P1_KS.py
practica_1/1_2_gnu_files/: Lab_1_Multiplicador.grc  Lab_1_copy_Decimation.grc  Lab_1_copy_interpolation.grc
